--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
     "react-dom": "^16.13.1",
     "react-scripts": "^4.0.1",
     "styled-components": "^5.2.1",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "web3": "^1.3.4"
   },
+  "homepage": "http://Peacanduck.github.io/coin-exchange",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -33,5 +37,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
